--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,13 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: #222222;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
